test/nl/formats/liberty/benchmarks/errors/truth_table_on_bus_error.lib
library (bus_test) {
    cell (ram) {
        pin(clk)   {
            direction : input;
            clock : true;
        } 
        bus(rd_out) {
            base_type : array ;
            direction : output; 
            function : "I0|I1" ;
        }
    }
}